# file-update

./: .gitignore  LICENSE  README.md  main.py  setup.cfg  setup.py
src/: cache.py  commandparse.py  copyfile.py  directories.py  directoryfilter.py  fipdate.py  fupdate.py  json.py  lambdafuncs.py  messages.py  osplatform.py  sourcefile.py
src/file_update/: __main__.py  cache.py  commandparse.py  directories.py  directoryfilter.py  hashfile.py  lambdas.py  messages.py  osplatform.py  sourcefile.py
