[metadata]
name = file-update
version = 1.0b
description = Updates multiple copies of a file residing in different directories
url = https://www.github.com/falbloshi/file-update
author = Faris Al-Bloshi
author_email = faris_ddx@hotmail.com
license = MIT
license_files = LICENSE
keywords = update, file, copy, share
platforms = Linux, Windows
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
[options]
zip_safe = False
setup_requires =
    setuptools >= 51.0.0
    wheel      >= 0.36.1
python_requires = >= 3.6.0
include_package_data = true
packages = find:
package_dir = 
    =src
[options.entry_points]
console_scripts =
    file-update = file_update.__main__:start
    fud = file_update.__main__:start
[options.packages.find]
where = src